--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "@emotion/styled": "^11.10.0",
     "@hookform/resolvers": "^2.9.8",
     "@mui/material": "^5.10.2",
+    "@next-auth/firebase-adapter": "^1.0.3",
+    "@redux-devtools/extension": "^3.2.5",
     "firebase": "^9.9.3",
     "moment": "^2.29.4",
     "next": "12.2.5",
-    "next-auth": "^4.10.3",
+    "next-auth": "^4.18.8",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.0",
     "react-toastify": "^9.0.8",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.54.5",
+    "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.5",
     "styled-icons": "^10.45.0",
     "yup": "^0.32.11"
