--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.10.2",
     "@next-auth/firebase-adapter": "^1.0.3",
     "@redux-devtools/extension": "^3.2.5",
+    "emoji-picker-react": "^4.4.7",
     "firebase": "^9.9.3",
     "moment": "^2.29.4",
     "next": "12.2.5",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "18.2.0",
+    "react-grid-gallery": "^1.0.0",
     "react-hook-form": "^7.36.0",
     "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
