--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,7 @@
 # misc
 .DS_Store
 *.pem
-# yarn 
-.yarn.lock
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -27,7 +26,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
+# .env*.local
 
 # vercel
 .vercel
